name:                postgresql-simple-opts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/postgresql-simple-opts#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Simple.Options
  build-depends: base >= 4.7 && < 5
               , postgresql-simple
               , optparse-applicative
               , bytestring
               , optparse-generic
               , markdown-unlit
  default-language:    Haskell2010
  ghc-options: -pgmL markdown-unlit
               -Wall
               -fno-warn-unused-do-bind

test-suite postgresql-simple-opts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgresql-simple-opts
                     , hspec
                     , postgresql-simple
                     , optparse-applicative
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/postgresql-simple-opts
